--- a/asp_presentacion/Pages/Shared/_Layout.cshtml
+++ b/asp_presentacion/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,13 @@
                                 Paises
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"
+                               asp-area=""
+                               asp-page="/Ventanas/Empresas">
+                                Empresas
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
