--- a/asp_presentacion/Pages/Shared/_Layout.cshtml
+++ b/asp_presentacion/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,13 @@
                                 Empresas
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"
+                               asp-area=""
+                               asp-page="/Ventanas/TiposDeAranceles">
+                                TiposDeAranceles
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
