--- a/asp_presentacion/Pages/Ventanas/TiposDeAranceles.cshtml
+++ b/asp_presentacion/Pages/Ventanas/TiposDeAranceles.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model asp_presentacion.Pages.Ventanas.EmpresasModel
+@model asp_presentacion.Pages.Ventanas.TiposDeArancelesModel 
 @{
-    ViewData["Titulo"] = "Empresas";
+    ViewData["Titulo"] = "TiposDeAranceles";
 }
 <center>
     <div>
@@ -10,7 +10,7 @@
             @Html.AntiForgeryToken()
 
             <div align="left">
-                <h3>Empresas</h3> <!--Comentario-->
+                <h3>TiposDeAranceles</h3> <!--Comentario-->
             </div>
             <div align="left"
                  class="bt_panel_buttons">
@@ -47,13 +47,13 @@
                 <input type="hidden"
                    asp-for="@Model.Actual!.Nombre" />
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Id_Pais" />
+                   asp-for="@Model.Actual!.FechaVigencia" />
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
             {
                 <div class="containers_vn panel panel-default">
-                    <h3>Empresas</h3>
+                    <h3>Paises</h3>
 
                     <div>
                         <div class="form-group">
@@ -68,14 +68,12 @@
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                PaisOrigen
+                                Fecha De Vigencia
                             </label>
                             <div class="col-lg-6">
-                                <select id="nmPais"
-                                        class="form-control"
-                                        asp-for="@Model.Actual!.Id_Pais"
-                                        asp-items="@(new SelectList(Model.ListaPaises,"Id","Nombre"))"> <!--Tiene un comportamiento curioso, el segundo es el que se presenta y toma el primero como valor-->
-                                </select> <!--El input no soporta asp_items-->
+                                <input id="nmFechaVigencia"
+                                   class="cts_forms form-control"
+                                   asp-for="@Model.Actual!.FechaVigencia" />   
                             </div>
                         </div>
                     </div>
@@ -102,7 +100,8 @@
                                 Desea borrar la entidad?
                             </h4>
                             <h6 align="left">
-                                @Model.Actual!.Nombre <!--Se borra la entidad-->
+                                @Model.Actual!.Nombre, 
+                                @Model.Actual!.FechaVigencia
                             </h6>
                             <br />
                             <br />
@@ -120,7 +119,7 @@
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
-                 Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar) 
+                 Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input id="flNombre"
                    class="cts_forms form-control"
@@ -135,7 +134,7 @@
                                 Nombre
                             </th>
                             <th>
-                                PaisOrigen
+                                FechaVigencia
                             </th>
                             <th>
                                 Accion
@@ -150,7 +149,7 @@
                                         @elemento.Nombre
                                     </td>
                                     <td>
-                                        @Model.ListaPaises!.FirstOrDefault(p => p.Id == elemento.Id_Pais)?.Nombre <!--Se muestra el nombre del pais-->
+                                        @elemento.FechaVigencia
                                     </td>
                                     <td>
                                         <input type="submit"
