:) int? != int ; null : 0

--- a/asp_presentacion/Pages/Shared/_Layout.cshtml
+++ b/asp_presentacion/Pages/Shared/_Layout.cshtml
@@ -47,6 +47,13 @@
                                 TiposDeAranceles
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"
+                               asp-area=""
+                               asp-page="/Ventanas/TiposDeProductos">
+                                TiposDeProductos
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
