--- a/asp_presentacion/Pages/Ventanas/TiposDeProductos.cshtml
+++ b/asp_presentacion/Pages/Ventanas/TiposDeProductos.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model asp_presentacion.Pages.Ventanas.TiposDeArancelesModel 
+@model asp_presentacion.Pages.Ventanas.TiposDeProductosModel
 @{
-    ViewData["Titulo"] = "TiposDeAranceles";
+    ViewData["Titulo"] = "TiposDeProductos";
 }
 <center>
     <div>
@@ -10,7 +10,7 @@
             @Html.AntiForgeryToken()
 
             <div align="left">
-                <h3>TiposDeAranceles</h3> <!--Comentario-->
+                <h3>TiposDeProductos</h3> <!--Comentario-->
             </div>
             <div align="left"
                  class="bt_panel_buttons">
@@ -47,7 +47,7 @@
                 <input type="hidden"
                    asp-for="@Model.Actual!.Nombre" />
                 <input type="hidden"
-                   asp-for="@Model.Actual!.FechaVigencia" />
+                   asp-for="@Model.Actual!.EntidadRegulatoria" />
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
@@ -68,12 +68,12 @@
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Fecha De Vigencia
+                                Entidad Regulatoria
                             </label>
                             <div class="col-lg-6">
-                                <input id="nmFechaVigencia"
+                                <input id="nmEntidadRegulatoria"
                                    class="cts_forms form-control"
-                                   asp-for="@Model.Actual!.FechaVigencia" />   
+                                   asp-for="@Model.Actual!.EntidadRegulatoria" />   
                             </div>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                             </h4>
                             <h6 align="left">
                                 @Model.Actual!.Nombre, 
-                                @Model.Actual!.FechaVigencia
+                                @Model.Actual!.EntidadRegulatoria
                             </h6>
                             <br />
                             <br />
@@ -134,7 +134,7 @@
                                 Nombre
                             </th>
                             <th>
-                                FechaVigencia
+                                EntidadRegulatoria
                             </th>
                             <th>
                                 Accion
@@ -149,7 +149,7 @@
                                         @elemento.Nombre
                                     </td>
                                     <td>
-                                        @elemento.FechaVigencia
+                                        @elemento.EntidadRegulatoria
                                     </td>
                                     <td>
                                         <input type="submit"
