--- a/asp_presentacion/Pages/Shared/_Layout.cshtml
+++ b/asp_presentacion/Pages/Shared/_Layout.cshtml
@@ -54,6 +54,13 @@
                                 TiposDeProductos
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"
+                               asp-area=""
+                               asp-page="/Ventanas/Productos">
+                               Productos
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
