--- a/asp_presentacion/Pages/Shared/_Layout.cshtml
+++ b/asp_presentacion/Pages/Shared/_Layout.cshtml
@@ -61,6 +61,13 @@
                                Productos
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"
+                               asp-area=""
+                               asp-page="/Ventanas/Ordenes">
+                                Ordenes
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
