--- a/asp_presentacion/Pages/Shared/_Layout.cshtml
+++ b/asp_presentacion/Pages/Shared/_Layout.cshtml
@@ -68,6 +68,14 @@
                                 Ordenes
                             </a>
                         </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"
+                               asp-area=""
+                               asp-page="/Ventanas/Aranceles">
+                                Aranceles
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
