--- a/asp_presentacion/Pages/Index.cshtml
+++ b/asp_presentacion/Pages/Index.cshtml
@@ -31,7 +31,6 @@
                            asp-for="@Model.Contrasena"
                            class="form-control" />
                 </div>
-
                 <input type="submit"
                        value="Limpiar"
                        asp-page-handler="BtClean"
@@ -39,6 +38,35 @@
                 <input type="submit"
                        value="Entrar"
                        asp-page-handler="BtEnter"
+                       class="btn btn-default" />
+            </div>
+        </form>
+        <form method="POST">
+            <div style="width:60%">
+                <div class="form-group">
+                    <label class="control-label">
+                        Nuevo Usuario:
+                    </label>
+                    <input onchange="keyUp(this)"
+                           asp-for="@Model.Email2"
+                           class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label class="control-label">
+                        Nueva Contraseña:
+                    </label>
+                    <input type="password"
+                           onchange="keyUp(this)"
+                           asp-for="@Model.Contrasena2"
+                           class="form-control" />
+                </div>
+                <input type="submit"
+                       value="Limpiar"
+                       asp-page-handler="BtClean2"
+                       class="btn btn-default" />
+                <input type="submit"
+                       value="Registrarse"
+                       asp-page-handler="BtEnter2"
                        class="btn btn-default" />
             </div>
         </form>
