--- a/asp_presentacion/Pages/Shared/_Layout.cshtml
+++ b/asp_presentacion/Pages/Shared/_Layout.cshtml
@@ -20,19 +20,21 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" 
-                                asp-area="" 
-                                asp-page="/Index">
+                            <a class="nav-link text-dark"
+                               asp-area=""
+                               asp-page="/Index">
                                 Inicio
                             </a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" 
-                                asp-area=""
-                                asp-page="/Ventanas/Paises">
+                            <a class="nav-link text-dark"
+                               asp-area=""
+                               asp-page="/Ventanas/Paises">
                                 Paises
                             </a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark"
                                asp-area=""
@@ -58,7 +60,7 @@
                             <a class="nav-link text-dark"
                                asp-area=""
                                asp-page="/Ventanas/Productos">
-                               Productos
+                                Productos
                             </a>
                         </li>
                         <li class="nav-item">
@@ -82,20 +84,26 @@
                                 Facturas
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark"
-                               asp-area=""
-                               asp-page="/Ventanas/Roles">
-                                Roles
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark"
-                               asp-area=""
-                               asp-page="/Ventanas/Usuarios">
-                                Registrarse
-                            </a>
-                        </li>
+                        @if (IndexModel.RolGlobal == "1")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark"
+                                   asp-area=""
+                                   asp-page="/Ventanas/Roles">
+                                    Roles
+                                </a>
+                            </li>
+                        }
+                        @if (IndexModel.RolGlobal == "1")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark"
+                                   asp-area=""
+                                   asp-page="/Ventanas/Usuarios">
+                                    Usuarios
+                                </a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
