--- a/asp_presentacion/Pages/Index.cshtml
+++ b/asp_presentacion/Pages/Index.cshtml
@@ -81,7 +81,7 @@ else
 
         <form method="POST">
             <input type="submit"
-                   value="Cerrar"
+                   value="CerrarSeccion"
                    asp-page-handler="BtClose"
                    class="btn btn-default" />
         </form>
