--- a/asp_presentacion/Pages/Ventanas/Ordenes.cshtml
+++ b/asp_presentacion/Pages/Ventanas/Ordenes.cshtml
@@ -6,57 +6,59 @@
 <center>
     <div>
         <form method="POST"
-            enctype="multipart/form-data">
+        enctype="multipart/form-data">
             @Html.AntiForgeryToken()
 
             <div align="left">
                 <h3>Ordenes</h3> <!--Comentario-->
             </div>
             <div align="left"
-                 class="bt_panel_buttons">
+            class="bt_panel_buttons">
                 <input type="submit"
-                       value="Refrescar"
-                       asp-page-handler="BtRefrescar"
-                       class="btn btn-secondary"
-                       disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
+                value="Refrescar"
+                asp-page-handler="BtRefrescar"
+                class="btn btn-secondary"
+                disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
+                @if (IndexModel.RolGlobal == "1")
+                {
+                    <input type="submit"
+                    value="Nuevo"
+                    asp-page-handler="BtNuevo"
+                    class="btn btn-secondary"
+                    disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
+                    <input type="submit"
+                    value="Guardar"
+                    asp-page-handler="BtGuardar"
+                    class="btn btn-secondary"
+                    disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />}
                 <input type="submit"
-                       value="Nuevo"
-                       asp-page-handler="BtNuevo"
-                       class="btn btn-secondary"
-                       disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-                <input type="submit"
-                       value="Guardar"
-                       asp-page-handler="BtGuardar"
-                       class="btn btn-secondary"
-                       disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-                <input type="submit"
-                       value="Cancelar"
-                       asp-page-handler="BtCancelar"
-                       class="btn btn-secondary"
-                       disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
+                value="Cancelar"
+                asp-page-handler="BtCancelar"
+                class="btn btn-secondary"
+                disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
             </div>
 
             @if (Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
-                 Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
+               Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input type="hidden"
-                    asp-for="@Model.Actual!.Id" />
+                asp-for="@Model.Actual!.Id" />
             }
             <!--Informacio que aparece para borrar-->
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Cod" />
+                asp-for="@Model.Actual!.Cod" />
                 <input type="hidden"
-                       asp-for="@Model.Actual!.CantidadUnidades" />
+                asp-for="@Model.Actual!.CantidadUnidades" />
                 <input type="hidden"
-                       asp-for="@Model.Actual!.Fecha" />
+                asp-for="@Model.Actual!.Fecha" />
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Id_PaisOrigen" />
+                asp-for="@Model.Actual!.Id_PaisOrigen" />
                 <input type="hidden"
-                       asp-for="@Model.Actual!.Id_PaisDestino" />
+                asp-for="@Model.Actual!.Id_PaisDestino" />
                 <input type="hidden"
-                       asp-for="@Model.Actual!.Id_Producto" />
+                asp-for="@Model.Actual!.Id_Producto" />
             }
             <!--Aqui se edita-->
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
@@ -71,8 +73,8 @@
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmCod"
-                                   class="cts_forms form-control"
-                                   asp-for="@Model.Actual!.Cod" />
+                                class="cts_forms form-control"
+                                asp-for="@Model.Actual!.Cod" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -81,8 +83,8 @@
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmCantidadUnidades"
-                                       class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.CantidadUnidades" />
+                                class="cts_forms form-control"
+                                asp-for="@Model.Actual!.CantidadUnidades" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -91,8 +93,8 @@
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmFecha"
-                                       class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.Fecha" />
+                                class="cts_forms form-control"
+                                asp-for="@Model.Actual!.Fecha" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -101,9 +103,9 @@
                             </label>
                             <div class="col-lg-6">
                                 <select id="nmPaises"
-                                        class="form-control"
-                                        asp-for="@Model.Actual!.Id_PaisOrigen"
-                                        asp-items="@(new SelectList(Model.ListaPaises,"Id","Nombre"))"> <!--Tiene un comportamiento curioso, el segundo es el que se presenta y toma el primero como valor-->
+                                class="form-control"
+                                asp-for="@Model.Actual!.Id_PaisOrigen"
+                                asp-items="@(new SelectList(Model.ListaPaises,"Id","Nombre"))"> <!--Tiene un comportamiento curioso, el segundo es el que se presenta y toma el primero como valor-->
                                 </select> <!--El input no soporta asp_items-->
                             </div>
                         </div>
@@ -113,9 +115,9 @@
                             </label>
                             <div class="col-lg-6">
                                 <select id="nmPaises"
-                                        class="form-control"
-                                        asp-for="@Model.Actual!.Id_PaisDestino"
-                                        asp-items="@(new SelectList(Model.ListaPaises,"Id","Nombre"))">
+                                class="form-control"
+                                asp-for="@Model.Actual!.Id_PaisDestino"
+                                asp-items="@(new SelectList(Model.ListaPaises,"Id","Nombre"))">
                                     <!--Tiene un comportamiento curioso, el segundo es el que se presenta y toma el primero como valor-->
                                 </select> <!--El input no soporta asp_items-->
                             </div>
@@ -126,9 +128,9 @@
                             </label>
                             <div class="col-lg-6">
                                 <select id="nmProductos"
-                                        class="form-control"
-                                        asp-for="@Model.Actual!.Id_Producto"
-                                        asp-items="@(new SelectList(Model.ListaProductos,"Id","Nombre"))">
+                                class="form-control"
+                                asp-for="@Model.Actual!.Id_Producto"
+                                asp-items="@(new SelectList(Model.ListaProductos,"Id","Nombre"))">
                                     <!--Tiene un comportamiento curioso, el segundo es el que se presenta y toma el primero como valor-->
                                 </select> <!--El input no soporta asp_items-->
                             </div>
@@ -140,8 +142,8 @@
             @if (ViewData.ContainsKey("Mensaje"))
             {
                 <input type="hidden"
-                   asp-for="@Model.Accion" />
-                    @await Html.PartialAsync("../Emergentes/Mensajes.cshtml");
+                asp-for="@Model.Accion" />
+                @await Html.PartialAsync("../Emergentes/Mensajes.cshtml");
             }
             <!--Mensaje para confirmar borrado-->
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
@@ -162,25 +164,25 @@
                             <br />
                             <br />
                             <input type="submit"
-                               value="Borrar"
-                               asp-page-handler="BtBorrar"
-                               class="btn btn-secondary" />
+                            value="Borrar"
+                            asp-page-handler="BtBorrar"
+                            class="btn btn-secondary" />
                             <input type="submit"
-                               value="Cerrar"
-                               asp-page-handler="BtCancelar"
-                               class="btn btn-secondary" />
+                            value="Cerrar"
+                            asp-page-handler="BtCancelar"
+                            class="btn btn-secondary" />
                         </div>
                     </div>
                 </div>
             }
             <!--La tabla del inicio-->
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
-                 Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar) 
+               Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar) 
             {
                 <input id="flCod"
-                   class="cts_forms form-control"
-                   asp-for="@Model.Filtro!.Cod"
-                   placeholder="Codigo" />
+                class="cts_forms form-control"
+                asp-for="@Model.Filtro!.Cod"
+                placeholder="Codigo" />
                 <br />
                 <!--Columnas-->
                 <div class="containers_vn panel panel-default">
@@ -231,18 +233,27 @@
                                     <td>
                                         @Model.ListaProductos!.FirstOrDefault(p => p.Id == elemento.Id_Producto)?.Nombre <!--Se muestra el nombre del pais-->
                                     </td>
-                                    <td>
-                                        <input type="submit"
-                                           value="Modicar"
-                                           asp-page-handler="BtModificar"
-                                           class="btn btn-secondary"
-                                           asp-route-data="@elemento.Id" />
-                                        <input type="submit"
-                                           value="Borrar"
-                                           asp-page-handler="BtBorrarVal"
-                                           class="btn btn-secondary"
-                                           asp-route-data="@elemento.Id" />
-                                    </td>
+                                    @if (IndexModel.RolGlobal == "1")
+                                    {
+                                        <td>
+                                            <input type="submit"
+                                            value="Modicar"
+                                            asp-page-handler="BtModificar"
+                                            class="btn btn-secondary"
+                                            asp-route-data="@elemento.Id" />
+                                            <input type="submit"
+                                            value="Borrar"
+                                            asp-page-handler="BtBorrarVal"
+                                            class="btn btn-secondary"
+                                            asp-route-data="@elemento.Id" />
+                                        </td>
+                                    }
+                                    else
+                                    {
+                                        <th>
+                                            SinAccionDisponible
+                                        </th>
+                                    }
                                 </tr>
                             }
                         }
