--- a/asp_presentacion/Pages/Ventanas/Productos.cshtml
+++ b/asp_presentacion/Pages/Ventanas/Productos.cshtml
@@ -6,53 +6,55 @@
 <center>
     <div>
         <form method="POST"
-            enctype="multipart/form-data">
+        enctype="multipart/form-data">
             @Html.AntiForgeryToken()
 
             <div align="left">
                 <h3>Productos</h3> <!--Comentario-->
             </div>
             <div align="left"
-                 class="bt_panel_buttons">
+            class="bt_panel_buttons">
                 <input type="submit"
-                       value="Refrescar"
-                       asp-page-handler="BtRefrescar"
-                       class="btn btn-secondary"
-                       disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
+                value="Refrescar"
+                asp-page-handler="BtRefrescar"
+                class="btn btn-secondary"
+                disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
+                @if (IndexModel.RolGlobal == "1")
+                {
+                    <input type="submit"
+                    value="Nuevo"
+                    asp-page-handler="BtNuevo"
+                    class="btn btn-secondary"
+                    disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
+                    <input type="submit"
+                    value="Guardar"
+                    asp-page-handler="BtGuardar"
+                    class="btn btn-secondary"
+                    disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />}
                 <input type="submit"
-                       value="Nuevo"
-                       asp-page-handler="BtNuevo"
-                       class="btn btn-secondary"
-                       disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-                <input type="submit"
-                       value="Guardar"
-                       asp-page-handler="BtGuardar"
-                       class="btn btn-secondary"
-                       disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-                <input type="submit"
-                       value="Cancelar"
-                       asp-page-handler="BtCancelar"
-                       class="btn btn-secondary"
-                       disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
+                value="Cancelar"
+                asp-page-handler="BtCancelar"
+                class="btn btn-secondary"
+                disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
             </div>
 
             @if (Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
-                 Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
+               Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input type="hidden"
-                    asp-for="@Model.Actual!.Id" />
+                asp-for="@Model.Actual!.Id" />
             }
             <!--Informacio que aparece para borrar-->
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Nombre" />
+                asp-for="@Model.Actual!.Nombre" />
                 <input type="hidden"
-                       asp-for="@Model.Actual!.PrecioUnitario" />
+                asp-for="@Model.Actual!.PrecioUnitario" />
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Id_Empresa" />
+                asp-for="@Model.Actual!.Id_Empresa" />
                 <input type="hidden"
-                       asp-for="@Model.Actual!.Id_TipoProducto" />
+                asp-for="@Model.Actual!.Id_TipoProducto" />
             }
             <!--Aqui se edita-->
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
@@ -67,8 +69,8 @@
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmNombre"
-                                   class="cts_forms form-control"
-                                   asp-for="@Model.Actual!.Nombre" />
+                                class="cts_forms form-control"
+                                asp-for="@Model.Actual!.Nombre" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -77,8 +79,8 @@
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmPrecioUnitario"
-                                       class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.PrecioUnitario" />
+                                class="cts_forms form-control"
+                                asp-for="@Model.Actual!.PrecioUnitario" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -87,9 +89,9 @@
                             </label>
                             <div class="col-lg-6">
                                 <select id="nmEmpresa"
-                                        class="form-control"
-                                        asp-for="@Model.Actual!.Id_Empresa"
-                                        asp-items="@(new SelectList(Model.ListaEmpresas,"Id","Nombre"))"> <!--Tiene un comportamiento curioso, el segundo es el que se presenta y toma el primero como valor-->
+                                class="form-control"
+                                asp-for="@Model.Actual!.Id_Empresa"
+                                asp-items="@(new SelectList(Model.ListaEmpresas,"Id","Nombre"))"> <!--Tiene un comportamiento curioso, el segundo es el que se presenta y toma el primero como valor-->
                                 </select> <!--El input no soporta asp_items-->
                             </div>
                         </div>
@@ -99,9 +101,9 @@
                             </label>
                             <div class="col-lg-6">
                                 <select id="nmTipoProducto"
-                                        class="form-control"
-                                        asp-for="@Model.Actual!.Id_TipoProducto"
-                                        asp-items="@(new SelectList(Model.ListaTiposDeProductos,"Id","Nombre"))">
+                                class="form-control"
+                                asp-for="@Model.Actual!.Id_TipoProducto"
+                                asp-items="@(new SelectList(Model.ListaTiposDeProductos,"Id","Nombre"))">
                                     <!--Tiene un comportamiento curioso, el segundo es el que se presenta y toma el primero como valor-->
                                 </select> <!--El input no soporta asp_items-->
                             </div>
@@ -113,8 +115,8 @@
             @if (ViewData.ContainsKey("Mensaje"))
             {
                 <input type="hidden"
-                   asp-for="@Model.Accion" />
-                    @await Html.PartialAsync("../Emergentes/Mensajes.cshtml");
+                asp-for="@Model.Accion" />
+                @await Html.PartialAsync("../Emergentes/Mensajes.cshtml");
             }
             <!--Mensaje para confirmar borrado-->
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
@@ -135,25 +137,25 @@
                             <br />
                             <br />
                             <input type="submit"
-                               value="Borrar"
-                               asp-page-handler="BtBorrar"
-                               class="btn btn-secondary" />
+                            value="Borrar"
+                            asp-page-handler="BtBorrar"
+                            class="btn btn-secondary" />
                             <input type="submit"
-                               value="Cerrar"
-                               asp-page-handler="BtCancelar"
-                               class="btn btn-secondary" />
+                            value="Cerrar"
+                            asp-page-handler="BtCancelar"
+                            class="btn btn-secondary" />
                         </div>
                     </div>
                 </div>
             }
             <!--La tabla del inicio-->
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
-                 Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar) 
+               Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar) 
             {
                 <input id="flNombre"
-                   class="cts_forms form-control"
-                   asp-for="@Model.Filtro!.Nombre"
-                   placeholder="Nombre" />
+                class="cts_forms form-control"
+                asp-for="@Model.Filtro!.Nombre"
+                placeholder="Nombre" />
                 <br />
                 <!--Columnas-->
                 <div class="containers_vn panel panel-default">
@@ -192,18 +194,27 @@
                                     <td>
                                         @Model.ListaTiposDeProductos!.FirstOrDefault(p => p.Id == elemento.Id_TipoProducto)?.Nombre <!--Se muestra el nombre del pais-->
                                     </td>
-                                    <td>
-                                        <input type="submit"
-                                           value="Modicar"
-                                           asp-page-handler="BtModificar"
-                                           class="btn btn-secondary"
-                                           asp-route-data="@elemento.Id" />
-                                        <input type="submit"
-                                           value="Borrar"
-                                           asp-page-handler="BtBorrarVal"
-                                           class="btn btn-secondary"
-                                           asp-route-data="@elemento.Id" />
-                                    </td>
+                                    @if (IndexModel.RolGlobal == "1")
+                                    {
+                                        <td>
+                                            <input type="submit"
+                                            value="Modicar"
+                                            asp-page-handler="BtModificar"
+                                            class="btn btn-secondary"
+                                            asp-route-data="@elemento.Id" />
+                                            <input type="submit"
+                                            value="Borrar"
+                                            asp-page-handler="BtBorrarVal"
+                                            class="btn btn-secondary"
+                                            asp-route-data="@elemento.Id" />
+                                        </td>
+                                    }
+                                    else
+                                    {
+                                        <th>
+                                            SinAccionDisponible
+                                        </th>
+                                    }
                                 </tr>
                             }
                         }
