--- a/asp_presentacion/Pages/Ventanas/Auditorias.cshtml
+++ b/asp_presentacion/Pages/Ventanas/Auditorias.cshtml
@@ -217,7 +217,7 @@
                                         @elemento.Informacion
                                     </td>
                                     <td>
-                                        @Model.ListaUsuarios!.FirstOrDefault(p => p.Id == elemento.Id_Usuario)?.Cod
+                                        @Model.ListaUsuarios!.FirstOrDefault(p => p.Id == elemento.Id_Usuario)?.Usuario
                                     </td>
                                     <td>
                                         @elemento.Fecha
