--- a/asp_presentacion/Pages/Ventanas/Roles.cshtml
+++ b/asp_presentacion/Pages/Ventanas/Roles.cshtml
@@ -55,7 +55,7 @@
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
             {
                 <div class="containers_vn panel panel-default">
-                    <h3>Paises</h3>
+                    <h3>Roles</h3>
 
                     <div>
                         <div class="form-group">
